--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --force https://Tanishq0505:$HF_TOKEN@huggingface.co/spaces/Tanishq0505/Search_Engine_llm main
+        run: git push --force https://${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Tanishq0505/Search_Engine_llm main
 
             
