--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
 
-  # to run this workflow manually from the Actions tab 
+  # to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -13,9 +13,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          lfs: false
-
+          lfs: true
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --force https://Tanishq0505:$HF_TOKEN@huggingface.co/spaces/Tanishq0505/Search_Engine_llm main
+        run: git push https://Tanishq0505:$HF_TOKEN@huggingface.co/spaces/Tanishq0505/Search_Engine_llm main
