--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,13 @@ name: Sync to Hugging Face hub
 on:
   push:
     branches: [main]
-
-  # To run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Check out the repository
+      # Step 1: Checkout Repository
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
@@ -20,18 +18,20 @@ jobs:
       # Step 2: Debug Token Substitution
       - name: Debug Token Substitution
         run: |
-          echo "Token substitution test: ${{ secrets.HF_TOKEN }}"
-
-      # Step 3: Set the correct remote and push to Hugging Face hub
-      - name: Push to Hugging Face Hub
+          echo "Token substitution test: ${HF_TOKEN:0:5}... (truncated for security)"
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
+
+      # Step 3: Test Network Connectivity
+      - name: Test Network Connectivity
         run: |
-          # Ensure the remote is set to the Hugging Face space
+          ping -c 4 huggingface.co
+
+      # Step 4: Push to Hugging Face Hub
+      - name: Push to Hugging Face Hub
+        run: |
           git remote set-url origin https://huggingface.co/spaces/Tanishq0505/Search_Engine_llm
-          
-          # Verify the remote configuration
           git remote -v
-          
-          # Push changes to the Hugging Face hub
-          git push --force https://${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Tanishq0505/Search_Engine_llm main
+          git push --force https://$HF_TOKEN@huggingface.co/spaces/Tanishq0505/Search_Engine_llm main
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
